--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
     </header>
 
     <main>
-        <section class="productos" data-productos>
-            
+        <section class="seccion-productos" data-productos>
+            <h1 class="titulo">Mis productos</h1>
+            <ul class="lista-productos">
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
+                    <h2 class="nombre-producto">Playera Spiderman</h2>
+                    <div class="info">
+                        <p class="precio">$ 160 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>
+            </ul>
         </section>
 
         <section>
