Styling title and adding other static products

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section class="seccion-productos" data-productos>
             <h1 class="titulo">Mis productos</h1>
             <ul class="lista-productos">
+
                 <li class="producto">
                     <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
                     <h2 class="nombre-producto">Playera Spiderman</h2>
@@ -25,14 +26,23 @@
                         <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
                     </div>  
                 </li>
+
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
+                    <h2 class="nombre-producto">Nintendo Switch</h2>
+                    <div class="info">
+                        <p class="precio">$ 2800 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>
+
             </ul>
         </section>
 
-        <section>
-            <form action="" class="formulario">
+        <form action="" class="formulario">
 
-            </form>
-        </section>
+        </form>
+
     </main>
 
     <footer class="pieDePagina">
