--- a/index.html
+++ b/index.html
@@ -72,6 +72,61 @@
                     </div>  
                 </li>
 
+                
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
+                    <h2 class="nombre-producto">Nintendo Switch</h2>
+                    <div class="info">
+                        <p class="precio">$ 2800 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>
+
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
+                    <h2 class="nombre-producto">Playera Spiderman</h2>
+                    <div class="info">
+                        <p class="precio">$ 160 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>
+
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
+                    <h2 class="nombre-producto">Nintendo Switch</h2>
+                    <div class="info">
+                        <p class="precio">$ 2800 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>
+                
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
+                    <h2 class="nombre-producto">Nintendo Switch</h2>
+                    <div class="info">
+                        <p class="precio">$ 2800 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>
+
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
+                    <h2 class="nombre-producto">Playera Spiderman</h2>
+                    <div class="info">
+                        <p class="precio">$ 160 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>
+
+                <li class="producto">
+                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
+                    <h2 class="nombre-producto">Nintendo Switch</h2>
+                    <div class="info">
+                        <p class="precio">$ 2800 MXN</p>
+                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
+                    </div>  
+                </li>   
+
             </ul>
         </section>
 
