--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
                     <input name="imagen" id="imagen" class="campo-completo" placeholder="imagen.." type="text" required/>
                     <span class="mensaje-error"></span>
                 </fieldset>
+
+                <div class="contenedor-botones">
+                    <button class="boton b-enviar">Enviar</button>
+                    <button class="boton b-limpiar">Limpiar</button>
+                </div>
+
             </form>
         </section>
         
