--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="encabezado">
-        <img src="imagenes/logo.svg" alt="">
+        <img src="imagenes/logo1.svg" alt="">
     </header>
 
     <main>
@@ -161,7 +161,9 @@
     </main>
 
     <footer class="pieDePagina">
-
+        <img src="./imagenes/logo1.svg" alt="">
+        <p class="texto t-principal">DESARROLLADO POR GERMAN TORRES SIERRA</p>
+        <P class="texto t-secundario">ALURA LATAM - 2024</P>
     </footer>
 
 </body>
