--- a/index.html
+++ b/index.html
@@ -18,23 +18,7 @@
             <h1 class="titulo">MIS PRODUCTOS:</h1>
             <ul class="lista-productos">
 
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
-                    <h2 class="nombre-producto">Playera Spiderman</h2>
-                    <div class="info">
-                        <p class="precio">$ 160 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
-                    <h2 class="nombre-producto">Nintendo Switch</h2>
-                    <div class="info">
-                        <p class="precio">$ 2800 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
+                <!-- <h2 class="mensaje" id="mensaje">No se han agregado productos ...</h2> -->
 
                 <li class="producto">
                     <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
@@ -43,89 +27,16 @@
                         <p class="precio">$ 160 MXN</p>
                         <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
                     </div>  
-                </li>
+                </li> 
 
                 <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
-                    <h2 class="nombre-producto">Nintendo Switch</h2>
+                    <img class="imagen-producto" src="https://i.ibb.co/NrY6mgg/Juguete-Spiderman.jpg" alt="">
+                    <h2 class="nombre-producto">Figura Spider-man</h2>
                     <div class="info">
-                        <p class="precio">$ 2800 MXN</p>
+                        <p class="precio">$ 800 MXN</p>
                         <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
                     </div>  
-                </li>
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
-                    <h2 class="nombre-producto">Playera Spiderman</h2>
-                    <div class="info">
-                        <p class="precio">$ 160 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
-                    <h2 class="nombre-producto">Nintendo Switch</h2>
-                    <div class="info">
-                        <p class="precio">$ 2800 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-
-                
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
-                    <h2 class="nombre-producto">Nintendo Switch</h2>
-                    <div class="info">
-                        <p class="precio">$ 2800 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
-                    <h2 class="nombre-producto">Playera Spiderman</h2>
-                    <div class="info">
-                        <p class="precio">$ 160 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
-                    <h2 class="nombre-producto">Nintendo Switch</h2>
-                    <div class="info">
-                        <p class="precio">$ 2800 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-                
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
-                    <h2 class="nombre-producto">Nintendo Switch</h2>
-                    <div class="info">
-                        <p class="precio">$ 2800 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
-                    <h2 class="nombre-producto">Playera Spiderman</h2>
-                    <div class="info">
-                        <p class="precio">$ 160 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/7Cx8GWj/switch.jpg" alt="">
-                    <h2 class="nombre-producto">Nintendo Switch</h2>
-                    <div class="info">
-                        <p class="precio">$ 2800 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li>   
+                </li> 
 
             </ul>
         </section>
@@ -135,12 +46,12 @@
             <form action="" class="formulario">
 
                 <fieldset class="campo-formulario">
-                    <input name="nombre" id="nombre" class="campo-completo" placeholder="nombre.." type="text" minlength="5" required/>
+                    <input name="nombre" id="nombre" class="campo-completo" placeholder="nombre.." type="text" minlength="5" maxlength="20" required/>
                     <span class="mensaje-error"></span>
                 </fieldset>
 
                 <fieldset class="campo-formulario">
-                    <input name="precio" id="precio" class="campo-completo" placeholder="precio.." type="text" minlength="1" required/>
+                    <input name="precio" id="precio" class="campo-completo" placeholder="precio.." type="text" minlength="1" maxlength="6" required/>
                     <span class="mensaje-error"></span>
                 </fieldset>
 
