--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                 </li> 
 
             </ul>
-        </section>
+        </section>  
+
+        <button class="b-tap"><img src="./imagenes/add-icon.svg" alt=""></button>
 
         <section class="agregar-productos">
+            <button class="b-cerrar"><img src="./imagenes/close-icon.svg" alt=""></button>
             <h1 class="titulo"> AGREGAR PRODUCTO:</h1>
             <form action="" class="formulario">
 
