Adding functionality to buttons of mobile version

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             </ul>
         </section>  
 
-        <button class="b-tap"><img src="./imagenes/add-icon.svg" alt=""></button>
+        <button class="b-tap" id="add"><img src="./imagenes/add-icon.svg" alt=""></button>
 
-        <section class="agregar-productos">
-            <button class="b-cerrar"><img src="./imagenes/close-icon.svg" alt=""></button>
+        <section class="agregar-productos" id="agregar-prod">
+            <button class="b-cerrar" id="close"><img src="./imagenes/close-icon.svg" alt=""></button>
             <h1 class="titulo"> AGREGAR PRODUCTO:</h1>
             <form action="" class="formulario">
 
@@ -80,5 +80,6 @@
         <P class="texto t-secundario">ALURA LATAM - 2024</P>
     </footer>
 
+    <script src="./js/mobileFeatures.js"></script>
 </body>
 </html>
