--- a/index.html
+++ b/index.html
@@ -14,29 +14,11 @@
     </header>
 
     <main>
-        <section class="seccion-productos" data-productos>
+        <section class="seccion-productos">
             <h1 class="titulo">MIS PRODUCTOS:</h1>
-            <ul class="lista-productos">
+            <ul class="lista-productos" data-productos>
 
-                <!-- <h2 class="mensaje" id="mensaje">No se han agregado productos ...</h2> -->
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/3NQ4hnH/Playera-Spiderman.jpg" alt="">
-                    <h2 class="nombre-producto">Playera Spiderman</h2>
-                    <div class="info">
-                        <p class="precio">$ 160 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li> 
-
-                <li class="producto">
-                    <img class="imagen-producto" src="https://i.ibb.co/NrY6mgg/Juguete-Spiderman.jpg" alt="">
-                    <h2 class="nombre-producto">Figura Spider-man</h2>
-                    <div class="info">
-                        <p class="precio">$ 800 MXN</p>
-                        <img class="icono-eliminar" src="./imagenes/icon_trash.svg" alt="">
-                    </div>  
-                </li> 
+                <h2 class="mensaje" id="mensaje">No se han agregado productos ...</h2> 
 
             </ul>
         </section>  
@@ -80,6 +62,7 @@
         <P class="texto t-secundario">ALURA LATAM - 2024</P>
     </footer>
 
-    <script src="./js/mobileFeatures.js"></script>
+    <script src="./js/funcionesCelular.js"></script>
+    <script src="./js/mostrarProductos.js" type="module"></script>
 </body>
 </html>
