--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 </fieldset>
 
                 <fieldset class="campo-formulario">
-                    <input name="precio" id="precio" class="campo-completo" placeholder="precio.." type="text" minlength="1" maxlength="6" required data-precio=""/>
+                    <input name="precio" id="precio" class="campo-completo" placeholder="precio.." type="number" minlength="1" maxlength="6" required data-precio=""/>
                     <span class="mensaje-error"></span>
                 </fieldset>
 
                 <fieldset class="campo-formulario">
-                    <input name="imagen" id="imagen" class="campo-completo" placeholder="imagen.." type="text" required data-imagen/>
+                    <input name="imagen" id="imagen" class="campo-completo" placeholder="imagen.." type="url" required data-imagen/>
                     <span class="mensaje-error"></span>
                 </fieldset>
 
@@ -65,5 +65,6 @@
     <script src="./js/funcionesCelular.js"></script>
     <script src="./js/mostrarProductos.js" type="module"></script>
     <script src="./js/enviarProductos.js" type="module"></script>
+    <script src="./js/eliminarProducto.js" type="module"></script>
 </body>
 </html>
