--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script src="./js/funcionesCelular.js"></script>
     <script src="./js/mostrarProductos.js" type="module"></script>
     <script src="./js/enviarProductos.js" type="module"></script>
+    <script src="./js/manejandoValidaciones.js"></script>
     <script src="./js/eliminarProducto.js" type="module"></script>
 </body>
 </html>
