--- a/front/index.html
+++ b/front/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./src/styles/reset.css">
+    <link rel="stylesheet" href="./src/styles/style.css">
     <link rel="icon" href="./imagenes/favicon.png" type="image/x-icon" >
 </head>
 <body>
@@ -63,11 +63,10 @@
         <P class="texto t-secundario">ALURA LATAM - 2024</P>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./js/funcionesCelular.js"></script>
-    <script src="./js/mostrarProductos.js" type="module"></script>
-    <script src="./js/enviarProductos.js" type="module"></script>
-    <script src="./js/manejandoValidaciones.js"></script>
-    <script src="./js/eliminarProducto.js" type="module"></script>
+    <script src="./src/js/funcionesCelular.js"></script>
+    <script src="./src/js/mostrarProductos.js" type="module"></script>
+    <script src="./src/js/enviarProductos.js" type="module"></script>
+    <script src="./src/js/manejandoValidaciones.js"></script>
+    <script src="./src/js/eliminarProducto.js" type="module"></script>
 </body>
 </html>
