--- a/front/index.html
+++ b/front/index.html
@@ -63,10 +63,10 @@
         <P class="texto t-secundario">ALURA LATAM - 2024</P>
     </footer>
 
-    <script src="./src/js/funcionesCelular.js" ></script>
-    <script src="./src/js/mostrarProductos.js" type="module"></script>
-    <script src="./src/js/enviarProductos.js" type="module"></script>
-    <script src="./src/js/manejandoValidaciones.js" ></script>
-    <script src="./src/js/eliminarProducto.js" type="module"></script>
+    <script src="src/js/funcionesCelular.js" ></script>
+    <script src="src/js/mostrarProductos.js" type="module"></script>
+    <script src="src/js/enviarProductos.js" type="module"></script>
+    <script src="src/js/manejandoValidaciones.js"></script>
+    <script src="src/js/eliminarProducto.js" type="module"></script>
 </body>
 </html>
